--- a/SmartCities/SmartCities/Views/Shared/_Layout.cshtml
+++ b/SmartCities/SmartCities/Views/Shared/_Layout.cshtml
@@ -3,8 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
+    <link href="~/Content/freelancer.css" rel="stylesheet" />
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
@@ -39,7 +41,8 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
-    @Scripts.Render("~/bundles/angularjs")
+        @Scripts.Render("~/bundles/angularjs")
+        <script src="~/Scripts/freelancer.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
